tests/test_error_foo_return.err
Error in line 3: Returning a not empty value while expecting void.
