tests/test_error_foo_return.uk
def main() void{
    int a;
    return(3);
}
